# xmanager

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  codelab.ipynb  colab_codelab.ipynb  compile_pb.sh  jupyter_codelab.ipynb  setup.py  xm_flags.py
.agents/skills/xmanager/: SKILL.md
.github/workflows/: ci.yml
docs/: executable_specs.md  executors.md  metadata_storage.md  oss_xm_scope.md  parameter_controller.md  tensorboard.md  xm_launch_api_principles.md
examples/bazel/: BUILD  bazel_binary_launcher.py  binary.cc
examples/cifar10_tensorflow/: cifar10.py  launcher.py  requirements.txt
examples/cifar10_tensorflow_k8s_multiworker/: cifar10.py  launcher.py
examples/cifar10_tensorflow_k8s_ps/: cifar10.py  launcher.py
examples/cifar10_tensorflow_k8s_tensorboard/: cifar10.py  launcher.py
examples/cifar10_tensorflow_tpu/: cifar10.py  launcher.py  requirements.txt
examples/cifar10_torch/: cifar10.py  launcher.py  requirements.txt
examples/cifar10_torch_xla/: cifar10.py  launcher.py  requirements.txt
examples/dockerfile/: Dockerfile  arg_printer.cc  launcher.py
examples/dopamine/: launcher.py  train.py
examples/local_arg_printer/: BUILD  MODULE.bazel  WORKSPACE  arg_printer.cc  launcher.py
examples/local_container_gpu/: cifar10.py  launcher.py
examples/local_container_links/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  launcher.py  requirements.in  requirements.txt  server.py
examples/parameter_controller/: db_config.yaml  launcher.py  requirements.txt
examples/parameter_controller/inner_job/: wait_job.py
examples/polynomial/: README.md  launcher.py  polynomial.py  requirements.txt
examples/vizier/: launcher.py  polynomial.py
setup_scripts/: build_pypi.sh  install_bazel.sh  install_docker.sh  install_gcloud.sh  install_python.sh  install_xmanager.sh  install_xmanager_cloud.sh  setup_all.sh  setup_gcp.sh
vizier/: vizier_controller.py  vizier_exploration.py  vizier_worker.py
xmanager/: module_lazy_loader.py  module_lazy_loader_test.py  xm_flags.py
xmanager/bazel/: client.py  client_test.py  file_utils.py
xmanager/cli/: README.md  cli.py
xmanager/cloud/: README.md  auth.py  auth_test.py  build_image.py  build_image_test.py  caip.py  caip_test.py  cloud_build.py  cloud_build_test.py  docker_lib.py  docker_lib_test.py  kubernetes.py  kubernetes_test.py  utils.py  utils_test.py  vertex.py  vertex_test.py
xmanager/cloud/data/: wrapped_entrypoint.sh
xmanager/contrib/: addressing.py  addressing_test.py  copybara.py  executor_selector.py  flow.py  framework_defaults.py  framework_defaults_test.py  gcs.py  gcs_test.py  parameter_controller.py  process_entry.py  tensorboard.py  tensorboard_test.py  tpu.py  xm_tensorflow.py  xm_tensorflow_test.py
xmanager/docker/: docker_adapter.py
xmanager/module_lazy_loader/: lazy_loader_module_attrs_test.py  module_lazy_loader.py
xmanager/vizier/: __init__.py  vizier_controller.py  vizier_exploration.py  vizier_worker.py
xmanager/vizier/vizier_cloud/: __init__.py  study_factory.py  vizier_controller.py  vizier_exploration.py  vizier_worker.py
xmanager/xm/: README.md  __init__.py  async_packager.py  async_packager_test.py  compute_units.py  core.py  core_test.py  executables.py  executables_test.py  factories.py  factories_generator.py  factories_test.py  id_predictor.py  id_predictor_test.py  job_blocks.py  job_blocks_test.py  job_operators.py  job_operators_test.py  metadata_context.py  packagables.py  packagables_generator.py  packagables_test.py  pattern_matching.py  pattern_matching_test.py  resources.py  resources_test.py  testing.py  utils.py  utils_test.py
xmanager/xm_cloud/: OWNERS  README.md  __init__.py  artifact.py  artifact_test.py  executor.py  experiment.py  experiment_test.py  snapshot_code.py
xmanager/xm_cloud/cli/: list_command.py  restart_command.py  stop_command.py
xmanager/xm_cloud/packaging/: router.py
xmanager/xm_local/: README.md  __init__.py  executables.py  execution.py  execution_test.py  executors.py  executors_test.py  experiment.py  handles.py  multiplexer.py  registry.py  status.py
xmanager/xm_local/packaging/: bazel_tools.py  bazel_tools_test.py  cloud.py  local.py  local_test.py  router.py
xmanager/xm_local/storage/: alembic.ini  alembic_migration_test.py  data.proto  database.py  database_test.py  schema.sql
xmanager/xm_local/storage/alembic/: README.md  env.py  script.py.mako
xmanager/xm_local/storage/alembic/versions/: f45829405692_migrate_or_create.py
xmanager/xm_mock/: __init__.py
xmanager_cloud/: README.md
xmanager_cloud/experiment_state_server/: experiment_state_api.py
xmanager_cloud/experiment_state_server/proto/: api.proto  artifact.proto  experiment.proto  operations.proto  priority.proto  resources.proto  status.proto  status_message.proto  structured_message.proto  url.proto  work_unit.proto  work_unit_execution.proto
xmanager_cloud/xid_service/proto/: api.proto  messages.proto
