# Copyright 2021 DeepMind Technologies Limited
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@python_deps//:requirements.bzl", "requirement")
load("@subpar//:subpar.bzl", "par_binary")

licenses(["notice"])

par_binary(
    name = "server",
    srcs = ["server.py"],
    deps = [
        requirement("absl-py"),
        requirement("bottle"),
        requirement("bottle-redis"),
    ],
)

container_image(
    name = "server_image",
    base = "@io_docker_index_library_python//image",
    entrypoint = ["/server.par"],
    files = [":server.par"],
)
