load("@aspect_rules_py//py:defs.bzl", "py_image_layer")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_python//python:defs.bzl", "py_binary")

licenses(["notice"])

py_binary(
    name = "server",
    srcs = ["server.py"],
    legacy_create_init = 0,
    deps = [
        "@pypi//absl_py",
        "@pypi//bottle_redis",
    ],
)

# Target platforms for cross-compiling the container image. The launcher selects
# the one matching the host CPU (Docker runs Linux containers regardless of host
# OS), so the image can be built from macOS or Linux.
platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

oci_image(
    name = "server_image",
    base = "@docker_io_python",
    entrypoint = ["/app/server"],
    tars = py_image_layer(
        name = "server_layer",
        binary = ":server",
        root = "/app/",
    ),
)

oci_load(
    name = "server_image.load",
    image = ":server_image",
    repo_tags = ["local_container_links_server:latest"],
)

filegroup(
    name = "server_image.tar",
    srcs = [":server_image.load"],
    output_group = "tarball",
)
