load("@aspect_rules_py//py:defs.bzl", "py_image_layer")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

licenses(["notice"])

py_binary(
    name = "server",
    srcs = ["server.py"],
    deps = [
        "@pypi//absl_py",
        "@pypi//flask",
        "@pypi//redis",
    ],
)

oci_image(
    name = "server_image",
    base = "@docker_io_python",
    entrypoint = ["/app/server"],
    tars = py_image_layer(
        name = "server_layer",
        binary = ":server",
        root = "/app/",
    ),
)

oci_load(
    name = "server_image.load",
    image = ":server_image",
    repo_tags = ["local_container_links_server:latest"],
)

filegroup(
    name = "server_image.tar",
    srcs = [":server_image.load"],
    output_group = "tarball",
)
